Fix alignment of header and video on home page (for testing github hook I made this small change)

--- a/player/public/style/main.css
+++ b/player/public/style/main.css
@@ -2,3 +2,7 @@
 	text-decoration: line-through;
 	color: grey;
 }
+
+h1, h2, h3 {
+	text-align: center;
+}
